--- a/views/store.erb
+++ b/views/store.erb
@@ -10,11 +10,11 @@
     <div class='container'>
 
       <div class="col-md-offset-1 col-md-5 col-xs-12 col-sm-6">
-        <p>A test user has been created on the Braintree with customer id <%= @custid %></p>
-        <p>The Vault token is <%= @token %></p>
+        <p>Customer ID: <%= @params[:customer_id] %></p>
+        <p>Payment Method Token: <%= @payment_method.token %></p>
       </div>
 
-      <form class='col-md-5 col-xs-12 col-sm-6' action='/step3' method='post'>
+      <form class='col-md-5 col-xs-12 col-sm-6' action='/process' method='post'>
 
         <div class="row">
           <div class="input-group input-group-lg">
@@ -34,8 +34,7 @@
 
         <div class="row">
           <div class="input-group col-md-6">
-            <input type='hidden' value='<%= @custid %>' name='custid'>
-            <input type='hidden' value='<%= @token %>' name='token'>
+            <input type='hidden' value='<%= params[:customer_id] %>' name='customer_id'>
             <input type='submit' value='Assign subscription' class='btn btn-danger btn-lg'>
           </div>
         </div>
